--- a/home.html
+++ b/home.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body class="body">
 
-    <header></header>
+    <header class="header">
+      <h1>Mark Housing Hub</h1>
+
+      <div class="nav-box">  
+        <div class="logo">
+        </div>
+
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="help.html">Help</a></li>
+            </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+    </main>
     
 </body>
 </html>
