--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cat 2</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Home page</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body class="body">
 
     <header class="header">
-        <h1>Mark Housing Hub</h1>
-        <nav>
-            <ul>
-                <li><button onclick="location.href='login.html'">Login</button>  </li>
-                <li><button onclick="location.href='register.html'">Register</button>  </li>
-            </ul>
+      <h1>Mark Housing Hub</h1>
+      
+      <!--Navigation-->
+        <div class="logo">
+        </div>
+
+        <nav class="nav-links">
+            <a href="home.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="help.html">Help</a>
         </nav>
     </header>
+
+    <main>
+    </main>
     
 </body>
 </html>
