--- a/login.html
+++ b/login.html
@@ -11,22 +11,19 @@
     <header class="header">
         <h1>Mark Housing Hub</h1>
         <nav>
-            <ul>
-                <li><button onclick="location.href='index.html'">Home</button>  </li>
-                <li><button onclick="location.href='register.html'">Register</button>  </li>
-            </ul>
+            <a href="welcome.html">Home</a>
+            <a href="register.html">Register</a>
         </nav>
     </header>
 
     <main>
+        <!--Login form-->
         <div class="login-box">
             <h2>Login</h2>
             <form class="login-form">
-                <label><b>Email:</b></label><br><br>
-                <input type="text" name="email" placeholder="example@gmail.com" required><br><br> 
-                <label><b>Password:</b></label><br><br>
-                <input type="password" name="password" required><br><br>
-                <button class="btn" type="submit"><b>Submit</b></button>
+                <input type="text" name="email" placeholder="Email" required><br><br> 
+                <input type="password" name="password" placeholder="Password" required><br><br>
+                <button class="btn" type="submit"><b>Login</b></button>
             </form>
         </div>
     </main>
