--- a/register.html
+++ b/register.html
@@ -11,23 +11,19 @@
     <header class="header">
         <h1>Mark Housing Hub</h1>
         <nav>
-            <ul>
-                <li><button onclick="location.href='index.html'">Home</button>  </li>
-                <li><button onclick="location.href='login.html'">Login</button>  </li>
-            </ul>
+            <a href="welcome.html">Home</a>
+            <a href="login.html">Login</a>
         </nav>
     </header>
 
     <main>
+        <!--Register form-->
         <div class="register-box">
             <h2>Register</h2>
             <form class="register-form">
-                <label><b>Fullname</b></label><br>
-                <input type="text" name="fullname" required><br><br>
-                <label><b>Email:</b></label><br>
-                <input type="email" name="email" placeholder="example@gmail.com" required><br><br> 
-                <label><b>Password:</b></label><br>
-                <input type="password" name="password" required><br><br>
+                <input type="text" name="fullname" placeholder="Fullname" required><br><br>
+                <input type="email" name="email" placeholder="Email" required><br><br> 
+                <input type="password" name="password" placeholder="Password" required><br><br>
                 <button class="btn" type="submit"><b>Submit</b></button>
             </form>
         </div>
