--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body class="body">
 
-    <header class="header">
-      <h1>Mark Housing Hub</h1>
+    <!--Navigation-->
+    <header class="navbar">
       
-      <!--Navigation-->
-        <div class="logo">
-        </div>
-
+        <div class="logo"></div>
         <nav class="nav-links">
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
@@ -23,8 +22,84 @@
         </nav>
     </header>
 
-    <main>
-    </main>
+    <!--Welcome Section-->
+    <section class="welcome">
+        <h1>Welcome To Rentopia</h1>
+        <p>Rent. Enjoy. Return. Rentopia makes renting smarter, faster,and effortless.</p>
+    </section>
+
+    <!--Search Bar-->
+    <section class="search">
+        <div class="search-box">
+          <span class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
+        <input type="text" placeholder="Search homes...">
+        <select>
+            <option value="location">Location</option>
+            <option value="budget">Budget</option>
+            <option value="both">Both</option>
+        </select>
+    </div>
+    </section>
+
+    <!--Available Homes Section-->
+    <section class="homes">
+        <h2>Available Rentals</h2>
+        <div class="homes-grid">
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+
+            <div class="homes-card">
+                <h3>House</h3>
+                <p>price per month</p>
+                <button class="details">Details</button>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
