--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Navigation-->
     <header class="navbar">
       
-        <div class="logo"></div>
+        <div class="logo">Rentopia</div>
         <nav class="nav-links">
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
@@ -46,60 +46,89 @@
         <h2>Available Rentals</h2>
         <div class="homes-grid">
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image1.jpg" alt="home 1">
+                <h3>Blue Haven Villas</h3>
+                <p><b>65,000 /month</b></p>
+                <p><i>Cozy unit in a quiet area with well-maintained interiors.</i></p>
                 <button class="details">Details</button>
             </div>
 
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image2.jpg" alt="home 2">
+                <h3>Maple Grove</h3>
+                <p><b>60,000 /month</b></p>
+                <p><i>Luxury apartment with panoramic views and elegant design.</i></p>
                 <button class="details">Details</button>
             </div>
 
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image3.jpg" alt="home 3">
+                <h3>Azure Villas</h3>
+                <p><b>70,000 /month</b></p>
+                <p><i>Luxury 3-bedroom unit with a swimming pool and rooftop access.</i></p>
                 <button class="details">Details</button>
             </div>
 
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image4.jpg" alt="home 4">
+                <h3>Golden Horizon</h3>
+                <p><b>24,000 /month</b></p>
+                <p><i>Bright and airy 2-bedroom flat featuring balcony 
+                    and serene neighborhood views.</i></p>
                 <button class="details">Details</button>
             </div>
 
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image5.jpg" alt="home 5">
+                <h3>Cedar Flats</h3>
+                <p><b>15,000 /month</b></p>
+                <p><i>Affordable 1-bedroom apartment with balcony
+                     and natural light.</i></p>
                 <button class="details">Details</button>
             </div>
 
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image6.jpg" alt="home 6">
+                <h3>Harmony Homes</h3>
+                <p><b>68,000 /month</b></p>
+                <p><i>Spacious 3-bedroom apartment with private 
+                    parking and garden.</i></p>
                 <button class="details">Details</button>
             </div>
 
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image7.jpg" alt="home 7">
+                <h3>Crystal Heights</h3>
+                <p><b>7,000 /month</b></p>
+                <p><i>Cozy bedsitter with bright windows and 
+                    peaceful surroundings.</i></p>
                 <button class="details">Details</button>
             </div>
 
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image8.jpg" alt="home 8">
+                <h3>Crown Suites</h3>
+                <p><b>17,000 /month</b></p>
+                <p><i>Modern 1-bedroom apartment with balcony
+                     and scenic surroundings.</i></p>
                 <button class="details">Details</button>
             </div>
 
             <div class="homes-card">
-                <h3>House</h3>
-                <p>price per month</p>
+                <img src="images/image9.jpg" alt="home 9">
+                <h3>Grandview Apartments</h3>
+                <p><b>23,000 /month</b></p>
+                <p><i>Modern 2-bedroom apartment with spacious
+                     living area and balcony.</i></p>
                 <button class="details">Details</button>
             </div>
         </div>
     </section>
+
+    <!--footer-->
+    <footer class="footer">
+        <p>&copy; 2025 Rentopia | Designed by Chucky</p>
+    </footer>
     
 </body>
 </html>
