--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
         <div class="logo">Rentopia</div>
         <nav class="nav-links">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="help.html">Help</a>
@@ -115,12 +115,12 @@
             </div>
 
             <div class="homes-card">
-                <img src="images/image9.jpg" alt="home 9">
+                <img src="home9/home9.jpg" alt="home 9">
                 <h3>Grandview Apartments</h3>
                 <p><b>23,000 /month</b></p>
                 <p><i>Modern 2-bedroom apartment with spacious
                      living area and balcony.</i></p>
-                <button class="details">Details</button>
+                <a href="home9.html"><button class="details">Details</button></a>
             </div>
         </div>
     </section>
