--- a/home1.html
+++ b/home1.html
@@ -26,8 +26,8 @@
 
     <!--Home Header-->
     <section class="welcome">
-        <h1>Crown Suites</h1>
-        <p><i class="fa fa-location-dot"></i>   Embu Runyejes, Kenya</p>
+        <h1>Blue Haven Villas</h1>
+        <p><i class="fa fa-location-dot"></i>   Embu Kiritiri, Kenya</p>
     </section>
 
         <!--image gallery-->
@@ -35,10 +35,15 @@
             <div class="image-container">
                 <button class="prev"><i class="fa fa-chevron-left"></i></button>
                 <div class="image-thumbnails">
-                    <img src="home8/house8.jpg" alt="blue villa">
-                    <img src="home8/sitting.jpg" alt="blue villa">
-                    <img src="home8/living.jpg" alt="blue villa">
-                    <img src="home8/bathroom.jpg" alt="blue villa">
+                    <img src="images/image1.jpg" alt="blue villa">
+                    <img src="home6/living.jpg" alt="blue villa">
+                    <img src="home6/nightview.jpg" alt="blue villa">
+                    <img src="home6/kitchen.jpg" alt="blue villa">
+                    <img src="home6/bedroom3.jpg" alt="blue villa">
+                    <img src="home6/bedroom2.jpg" alt="blue villa">
+                    <img src="home6/bedroom.jpg" alt="blue villa">
+                    <img src="home6/bathroom.jpg" alt="blue villa">
+                    <img src="home6/bathroom2.jpg" alt="blue villa">
                 </div>
                 <button class="next"><i class="fa fa-chevron-right"></i></button>
             </div>
@@ -47,9 +52,10 @@
         <!--description-->
         <section class="description">
             <h2>Property Description</h2>
-            <p><b>Price:</b> <i>Ksh 17,000 / month </i></p>
-            <p>Modern 1-bedroom apartment with balcony and scenic surroundings.<br>
-
+            <p><b>Price:</b> <i>Ksh 65,000 / month </i></p>
+            <p>Elegant 3-bedroom villa with modern amenities and spacious interiors.<br> 
+               Located in the serene Embu Kiritiri area,<br> this villa offers comfort,
+               style, and a perfect retreat for families.
             </p>
         </section>
 
@@ -57,10 +63,9 @@
         <section class="features">
             <h3>Features</h3>
             <ul>
-                <li><i class="fa-solid fa-bed"></i> 1 Bedroom</li>
-                <li><i class="fa-solid fa-bath"></i> 1 Bathroom</li>
-                <li><i class="fa-solid fa-wifi"></i> Affordable wifi</li>
-                <li><i class="fa-solid fa-car"></i> Ample Parking Space</li>
+                <li><i class="fa-solid fa-bed"></i> 2 Bedrooms</li>
+                <li><i class="fa-solid fa-bath"></i> 2 Bathrooms</li>
+                <li><i class="fa-solid fa-car"></i> Parking Space</li>
                 <li><i class="fa-solid fa-lock"></i> 24/7 Security</li>
             </ul>
         </section>
