--- a/home6.html
+++ b/home6.html
@@ -26,8 +26,8 @@
 
     <!--Home Header-->
     <section class="welcome">
-        <h1>Crown Suites</h1>
-        <p><i class="fa fa-location-dot"></i>   Embu Runyejes, Kenya</p>
+        <h1>Harmony Homes</h1>
+        <p><i class="fa fa-location-dot"></i>  Along Meru-Maua Road</p>
     </section>
 
         <!--image gallery-->
@@ -35,10 +35,13 @@
             <div class="image-container">
                 <button class="prev"><i class="fa fa-chevron-left"></i></button>
                 <div class="image-thumbnails">
-                    <img src="home8/house8.jpg" alt="blue villa">
-                    <img src="home8/sitting.jpg" alt="blue villa">
-                    <img src="home8/living.jpg" alt="blue villa">
-                    <img src="home8/bathroom.jpg" alt="blue villa">
+                    <img src="images/image6.jpg" alt="blue villa">
+                    <img src="home7/bedroom.jpg" alt="blue villa">
+                    <img src="home7/bedroom2.jpg" alt="blue villa">
+                    <img src="home7/kitchen.jpg" alt="blue villa">
+                    <img src="home7/living.jpg" alt="blue villa">
+                    <img src="home7/living2.jpg" alt="blue villa">
+                    <img src="home7/living3.jpg" alt="blue villa">
                 </div>
                 <button class="next"><i class="fa fa-chevron-right"></i></button>
             </div>
@@ -47,9 +50,9 @@
         <!--description-->
         <section class="description">
             <h2>Property Description</h2>
-            <p><b>Price:</b> <i>Ksh 17,000 / month </i></p>
-            <p>Modern 1-bedroom apartment with balcony and scenic surroundings.<br>
-
+            <p><b>Price:</b> <i>Ksh 68,000 / month </i></p>
+            <p>Spacious 2-bedroom apartment with private 
+               parking and garden.
             </p>
         </section>
 
@@ -60,7 +63,7 @@
                 <li><i class="fa-solid fa-bed"></i> 1 Bedroom</li>
                 <li><i class="fa-solid fa-bath"></i> 1 Bathroom</li>
                 <li><i class="fa-solid fa-wifi"></i> Affordable wifi</li>
-                <li><i class="fa-solid fa-car"></i> Ample Parking Space</li>
+                <li><i class="fa-solid fa-car"></i> Parking Space</li>
                 <li><i class="fa-solid fa-lock"></i> 24/7 Security</li>
             </ul>
         </section>
