--- a/home7.html
+++ b/home7.html
@@ -26,8 +26,8 @@
 
     <!--Home Header-->
     <section class="welcome">
-        <h1>Crown Suites</h1>
-        <p><i class="fa fa-location-dot"></i>   Embu Runyejes, Kenya</p>
+        <h1>Cedar Flats</h1>
+        <p><i class="fa fa-location-dot"></i>   Kangaru Town, Embu</p>
     </section>
 
         <!--image gallery-->
@@ -35,10 +35,10 @@
             <div class="image-container">
                 <button class="prev"><i class="fa fa-chevron-left"></i></button>
                 <div class="image-thumbnails">
-                    <img src="home8/house8.jpg" alt="blue villa">
-                    <img src="home8/sitting.jpg" alt="blue villa">
-                    <img src="home8/living.jpg" alt="blue villa">
-                    <img src="home8/bathroom.jpg" alt="blue villa">
+                    <img src="images/image7.jpg" alt="blue villa">
+                    <img src="home1/living.jpg" alt="blue villa">
+                    <img src="home1/living2.jpg" alt="blue villa">
+                    <img src="home1/bathroom.jpg" alt="blue villa">
                 </div>
                 <button class="next"><i class="fa fa-chevron-right"></i></button>
             </div>
@@ -47,9 +47,9 @@
         <!--description-->
         <section class="description">
             <h2>Property Description</h2>
-            <p><b>Price:</b> <i>Ksh 17,000 / month </i></p>
-            <p>Modern 1-bedroom apartment with balcony and scenic surroundings.<br>
-
+            <p><b>Price:</b> <i>Ksh 7,000 / month </i></p>
+            <p>Cozy bedsitter with bright windows and 
+               peaceful surroundings.
             </p>
         </section>
 
@@ -57,10 +57,8 @@
         <section class="features">
             <h3>Features</h3>
             <ul>
-                <li><i class="fa-solid fa-bed"></i> 1 Bedroom</li>
+                <li><i class="fa-solid fa-wifi"></i> Affordable Wifi</li>
                 <li><i class="fa-solid fa-bath"></i> 1 Bathroom</li>
-                <li><i class="fa-solid fa-wifi"></i> Affordable wifi</li>
-                <li><i class="fa-solid fa-car"></i> Ample Parking Space</li>
                 <li><i class="fa-solid fa-lock"></i> 24/7 Security</li>
             </ul>
         </section>
