--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="help.html">Help</a>
+            <a href="#" id="logoutlink">Logout</a>
         </nav>
     </header>
 
     <!--Welcome Section-->
     <section class="welcome">
+        <h2 id="greeting"></h2>
         <h1>Welcome To Rentopia</h1>
-        <p>Rent. Enjoy. Return. Rentopia makes renting smarter, faster,and effortless.</p>
+        <p><i>Rent. Enjoy. Return.<br> Rentopia makes renting smarter, faster,and effortless.</i></p>
     </section>
 
     <!--Search Bar-->
@@ -50,7 +52,7 @@
                 <h3>Blue Haven Villas</h3>
                 <p><b>65,000 /month</b></p>
                 <p><i>Cozy unit in a quiet area with well-maintained interiors.</i></p>
-                <button class="details">Details</button>
+                <a href="home1.html"><button class="details">Details</button></a>
             </div>
 
             <div class="homes-card">
@@ -58,7 +60,7 @@
                 <h3>Maple Grove</h3>
                 <p><b>60,000 /month</b></p>
                 <p><i>Luxury apartment with panoramic views and elegant design.</i></p>
-                <button class="details">Details</button>
+                <a href="home2.html"><button class="details">Details</button></a>
             </div>
 
             <div class="homes-card">
@@ -66,34 +68,34 @@
                 <h3>Azure Villas</h3>
                 <p><b>70,000 /month</b></p>
                 <p><i>Luxury 3-bedroom unit with a swimming pool and rooftop access.</i></p>
-                <button class="details">Details</button>
+                <a href="home3.html"><button class="details">Details</button></a>
             </div>
 
             <div class="homes-card">
                 <img src="images/image4.jpg" alt="home 4">
                 <h3>Golden Horizon</h3>
-                <p><b>24,000 /month</b></p>
-                <p><i>Bright and airy 2-bedroom flat featuring balcony 
+                <p><b>18,000 /month</b></p>
+                <p><i>Bright and airy 1-bedroom flats featuring balcony 
                     and serene neighborhood views.</i></p>
-                <button class="details">Details</button>
+                <a href="home4.html"><button class="details">Details</button></a>
             </div>
 
             <div class="homes-card">
                 <img src="images/image5.jpg" alt="home 5">
                 <h3>Cedar Flats</h3>
-                <p><b>15,000 /month</b></p>
+                <p><b>17,000 /month</b></p>
                 <p><i>Affordable 1-bedroom apartment with balcony
                      and natural light.</i></p>
-                <button class="details">Details</button>
+                <a href="home5.html"><button class="details">Details</button></a>
             </div>
 
             <div class="homes-card">
                 <img src="images/image6.jpg" alt="home 6">
                 <h3>Harmony Homes</h3>
                 <p><b>68,000 /month</b></p>
-                <p><i>Spacious 3-bedroom apartment with private 
+                <p><i>Spacious 2-bedroom apartment with private 
                     parking and garden.</i></p>
-                <button class="details">Details</button>
+                <a href="home6.html"><button class="details">Details</button></a>
             </div>
 
             <div class="homes-card">
@@ -102,20 +104,20 @@
                 <p><b>7,000 /month</b></p>
                 <p><i>Cozy bedsitter with bright windows and 
                     peaceful surroundings.</i></p>
-                <button class="details">Details</button>
+                <a href="home7.html"><button class="details">Details</button></a>
             </div>
 
             <div class="homes-card">
-                <img src="images/image8.jpg" alt="home 8">
+                <img src="home8/house8.jpg" alt="home 8">
                 <h3>Crown Suites</h3>
                 <p><b>17,000 /month</b></p>
                 <p><i>Modern 1-bedroom apartment with balcony
                      and scenic surroundings.</i></p>
-                <button class="details">Details</button>
+                <a href="home8.html"><button class="details">Details</button></a>
             </div>
 
             <div class="homes-card">
-                <img src="home9/home9.jpg" alt="home 9">
+                <img src="home9/home9.jpg" style="height:100;" alt="home 9">
                 <h3>Grandview Apartments</h3>
                 <p><b>23,000 /month</b></p>
                 <p><i>Modern 2-bedroom apartment with spacious
@@ -131,4 +133,5 @@
     </footer>
     
 </body>
+<script src="script.js"></script>
 </html>
