--- a/home3.html
+++ b/home3.html
@@ -26,8 +26,8 @@
 
     <!--Home Header-->
     <section class="welcome">
-        <h1>Crown Suites</h1>
-        <p><i class="fa fa-location-dot"></i>   Embu Runyejes, Kenya</p>
+        <h1>Azure Villas</h1>
+        <p><i class="fa fa-location-dot"></i>   Embu Rwika, Kenya</p>
     </section>
 
         <!--image gallery-->
@@ -35,10 +35,13 @@
             <div class="image-container">
                 <button class="prev"><i class="fa fa-chevron-left"></i></button>
                 <div class="image-thumbnails">
-                    <img src="home8/house8.jpg" alt="blue villa">
-                    <img src="home8/sitting.jpg" alt="blue villa">
-                    <img src="home8/living.jpg" alt="blue villa">
-                    <img src="home8/bathroom.jpg" alt="blue villa">
+                    <img src="images/image3.jpg" alt="blue villa">
+                    <img src="home3/sitting.jpg" alt="blue villa">
+                    <img src="home3/dining.jpg" alt="blue villa">
+                    <img src="home3/bedroom3.jpg" alt="blue villa">
+                    <img src="home3/bedroom.jpg" alt="blue villa">
+                    <img src="home3/bedroom2.jpg" alt="blue villa">
+                    <img src="home3/bathrooms.jpg" alt="blue villa">
                 </div>
                 <button class="next"><i class="fa fa-chevron-right"></i></button>
             </div>
@@ -47,9 +50,10 @@
         <!--description-->
         <section class="description">
             <h2>Property Description</h2>
-            <p><b>Price:</b> <i>Ksh 17,000 / month </i></p>
-            <p>Modern 1-bedroom apartment with balcony and scenic surroundings.<br>
-
+            <p><b>Price:</b> <i>Ksh 70,000 / month </i></p>
+            <p>Luxurious 3-bedroom villa with modern amenities and spacious interiors.<br> 
+               Situated in the peaceful Embu Rwika area,<br> this villa offers comfort,
+               elegance, and a perfect retreat for families or groups.
             </p>
         </section>
 
@@ -57,10 +61,9 @@
         <section class="features">
             <h3>Features</h3>
             <ul>
-                <li><i class="fa-solid fa-bed"></i> 1 Bedroom</li>
-                <li><i class="fa-solid fa-bath"></i> 1 Bathroom</li>
-                <li><i class="fa-solid fa-wifi"></i> Affordable wifi</li>
-                <li><i class="fa-solid fa-car"></i> Ample Parking Space</li>
+                <li><i class="fa-solid fa-bed"></i> 3 Bedrooms</li>
+                <li><i class="fa-solid fa-bath"></i> 2 Bathrooms</li>
+                <li><i class="fa-solid fa-water"></i> Swimming Pool</li>
                 <li><i class="fa-solid fa-lock"></i> 24/7 Security</li>
             </ul>
         </section>
