--- a/home4.html
+++ b/home4.html
@@ -26,8 +26,8 @@
 
     <!--Home Header-->
     <section class="welcome">
-        <h1>Crown Suites</h1>
-        <p><i class="fa fa-location-dot"></i>   Embu Runyejes, Kenya</p>
+        <h1>Maple Grove</h1>
+        <p><i class="fa fa-location-dot"></i>   Meru Nchiru, Kenya</p>
     </section>
 
         <!--image gallery-->
@@ -35,10 +35,12 @@
             <div class="image-container">
                 <button class="prev"><i class="fa fa-chevron-left"></i></button>
                 <div class="image-thumbnails">
-                    <img src="home8/house8.jpg" alt="blue villa">
-                    <img src="home8/sitting.jpg" alt="blue villa">
-                    <img src="home8/living.jpg" alt="blue villa">
-                    <img src="home8/bathroom.jpg" alt="blue villa">
+                    <img src="images/image4.jpg" alt="blue villa">
+                    <img src="home10/living.jpg" alt="blue villa">
+                    <img src="home10/washroom.jpg" alt="blue villa">
+                    <img src="home10/sitting.jpg" alt="blue villa">
+                    <img src="home10/kitchen.jpg" alt="blue villa">
+                    <img src="home10/bedroom.jpg" alt="blue villa">
                 </div>
                 <button class="next"><i class="fa fa-chevron-right"></i></button>
             </div>
@@ -47,9 +49,9 @@
         <!--description-->
         <section class="description">
             <h2>Property Description</h2>
-            <p><b>Price:</b> <i>Ksh 17,000 / month </i></p>
-            <p>Modern 1-bedroom apartment with balcony and scenic surroundings.<br>
-
+            <p><b>Price:</b> <i>Ksh 18,000 / month </i></p>
+            <p>Bright and airy 1-bedroom flats featuring balcony 
+               and serene neighborhood views.
             </p>
         </section>
 
@@ -60,7 +62,7 @@
                 <li><i class="fa-solid fa-bed"></i> 1 Bedroom</li>
                 <li><i class="fa-solid fa-bath"></i> 1 Bathroom</li>
                 <li><i class="fa-solid fa-wifi"></i> Affordable wifi</li>
-                <li><i class="fa-solid fa-car"></i> Ample Parking Space</li>
+                <li><i class="fa-solid fa-car"></i> Parking Space</li>
                 <li><i class="fa-solid fa-lock"></i> 24/7 Security</li>
             </ul>
         </section>
