--- a/home5.html
+++ b/home5.html
@@ -26,8 +26,8 @@
 
     <!--Home Header-->
     <section class="welcome">
-        <h1>Crown Suites</h1>
-        <p><i class="fa fa-location-dot"></i>   Embu Runyejes, Kenya</p>
+        <h1>Cedar Flats</h1>
+        <p><i class="fa fa-location-dot"></i>   Chuka Town, Kenya</p>
     </section>
 
         <!--image gallery-->
@@ -35,10 +35,12 @@
             <div class="image-container">
                 <button class="prev"><i class="fa fa-chevron-left"></i></button>
                 <div class="image-thumbnails">
-                    <img src="home8/house8.jpg" alt="blue villa">
-                    <img src="home8/sitting.jpg" alt="blue villa">
-                    <img src="home8/living.jpg" alt="blue villa">
-                    <img src="home8/bathroom.jpg" alt="blue villa">
+                    <img src="images/image5.jpg" alt="blue villa">
+                    <img src="home4/living.jpg" alt="blue villa">
+                    <img src="home4/dining.jpg" alt="blue villa">
+                    <img src="home4/kitchen.jpg" alt="blue villa">
+                    <img src="home4/bedroom.jpg" alt="blue villa">
+                    <img src="home4/bathroom.jpg" alt="blue villa">
                 </div>
                 <button class="next"><i class="fa fa-chevron-right"></i></button>
             </div>
@@ -48,8 +50,9 @@
         <section class="description">
             <h2>Property Description</h2>
             <p><b>Price:</b> <i>Ksh 17,000 / month </i></p>
-            <p>Modern 1-bedroom apartment with balcony and scenic surroundings.<br>
-
+            <p>Modern 1-bedroom apartment with spacious living area and balcony.<br> 
+               Located in the heart of Chuka Town,<br> this apartment offers convenience,
+               contemporary design, and essential amenities for comfortable living.
             </p>
         </section>
 
@@ -59,8 +62,7 @@
             <ul>
                 <li><i class="fa-solid fa-bed"></i> 1 Bedroom</li>
                 <li><i class="fa-solid fa-bath"></i> 1 Bathroom</li>
-                <li><i class="fa-solid fa-wifi"></i> Affordable wifi</li>
-                <li><i class="fa-solid fa-car"></i> Ample Parking Space</li>
+                <li><i class="fa-solid fa-car"></i> Parking Space</li>
                 <li><i class="fa-solid fa-lock"></i> 24/7 Security</li>
             </ul>
         </section>
