--- a/login.html
+++ b/login.html
@@ -9,9 +9,9 @@
 <body class="body">
 
     <header class="header">
-        <h1>Mark Housing Hub</h1>
-        <nav>
-            <a href="welcome.html">Home</a>
+        <h1>Rentopia</h1>
+        <nav class="nav1">
+            <a href="login.html">Login</a>
             <a href="register.html">Register</a>
         </nav>
     </header>
@@ -20,12 +20,15 @@
         <!--Login form-->
         <div class="login-box">
             <h2>Login</h2>
-            <form class="login-form">
-                <input type="text" name="email" placeholder="Email" required><br><br> 
-                <input type="password" name="password" placeholder="Password" required><br><br>
+            <form id="loginform" class="login-form">
+                <input id="email" type="text" name="email" placeholder="Email" required><br><br> 
+                <input id="password" type="password" name="password" placeholder="Password" required><br><br>
                 <button class="btn" type="submit"><b>Login</b></button>
-            </form>
+            </form><br>
+            <p id="loginMessage"></p>
+            <p>Don't have an account? <a href="register.html">Register here</a></p>
         </div>
     </main>
 </body>
+<script src="script.js"></script>
 </html>
