--- a/register.html
+++ b/register.html
@@ -9,9 +9,9 @@
 <body class="body">
 
     <header class="header">
-        <h1>Mark Housing Hub</h1>
-        <nav>
-            <a href="welcome.html">Home</a>
+        <h1>Rentopia</h1>
+        <nav class="nav1">
+            <a href="register.html">Register</a>
             <a href="login.html">Login</a>
         </nav>
     </header>
@@ -20,14 +20,17 @@
         <!--Register form-->
         <div class="register-box">
             <h2>Register</h2>
-            <form class="register-form">
-                <input type="text" name="fullname" placeholder="Fullname" required><br><br>
-                <input type="email" name="email" placeholder="Email" required><br><br> 
-                <input type="password" name="password" placeholder="Password" required><br><br>
-                <button class="btn" type="submit"><b>Submit</b></button>
-            </form>
+            <form id="registerForm" class="register-form">
+                <input id="fullname" type="text" name="fullname" placeholder="Fullname" required><br><br>
+                <input id="email" type="email" name="email" placeholder="Email" required><br><br> 
+                <input id="password" type="password" name="password" placeholder="Password" required><br><br>
+                <button class="btn" type="submit"><b>Register</b></button>
+            </form><br>
+            <p id="registerMessage"></p>
+            <p>Already have an account? <a href="login.html">Login here</a></p>
         </div>
     </main>
     
 </body>
+<script src="script.js"></script>
 </html>
