--- a/home2.html
+++ b/home2.html
@@ -15,7 +15,7 @@
       
         <div class="logo">Rentopia</div>
         <nav class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="help.html">Help</a>
