--- a/index.html
+++ b/index.html
@@ -3,135 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
-    <link rel="stylesheet" href="style.css"> 
+    <title>login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
 
-    <!--Navigation-->
-    <header class="navbar">
-      
-        <div class="logo">Rentopia</div>
-        <nav class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="help.html">Help</a>
-            <a href="#" id="logoutlink">Logout</a>
+    <header class="header">
+        <h1>Rentopia</h1>
+        <nav class="nav1">
+            <a href="index.html">Login</a>
+            <a href="register.html">Register</a>
         </nav>
     </header>
 
-    <!--Welcome Section-->
-    <section class="welcome">
-        <h2 id="greeting"></h2>
-        <h1>Welcome To Rentopia</h1>
-        <p><i>Rent. Enjoy. Return.<br> Rentopia makes renting smarter, faster,and effortless.</i></p>
-    </section>
-
-    <!--Search Bar-->
-    <section class="search">
-        <div class="search-box">
-          <span class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
-        <input type="text" placeholder="Search homes...">
-        <select>
-            <option value="location">Location</option>
-            <option value="budget">Budget</option>
-            <option value="both">Both</option>
-        </select>
-    </div>
-    </section>
-
-    <!--Available Homes Section-->
-    <section class="homes">
-        <h2>Available Rentals</h2>
-        <div class="homes-grid">
-            <div class="homes-card">
-                <img src="images/image1.jpg" alt="home 1">
-                <h3>Blue Haven Villas</h3>
-                <p><b>65,000 /month</b></p>
-                <p><i>Cozy unit in a quiet area with well-maintained interiors.</i></p>
-                <a href="home1.html"><button class="details">Details</button></a>
-            </div>
-
-            <div class="homes-card">
-                <img src="images/image2.jpg" alt="home 2">
-                <h3>Maple Grove</h3>
-                <p><b>60,000 /month</b></p>
-                <p><i>Luxury apartment with panoramic views and elegant design.</i></p>
-                <a href="home2.html"><button class="details">Details</button></a>
-            </div>
-
-            <div class="homes-card">
-                <img src="images/image3.jpg" alt="home 3">
-                <h3>Azure Villas</h3>
-                <p><b>70,000 /month</b></p>
-                <p><i>Luxury 3-bedroom unit with a swimming pool and rooftop access.</i></p>
-                <a href="home3.html"><button class="details">Details</button></a>
-            </div>
-
-            <div class="homes-card">
-                <img src="images/image4.jpg" alt="home 4">
-                <h3>Golden Horizon</h3>
-                <p><b>18,000 /month</b></p>
-                <p><i>Bright and airy 1-bedroom flats featuring balcony 
-                    and serene neighborhood views.</i></p>
-                <a href="home4.html"><button class="details">Details</button></a>
-            </div>
-
-            <div class="homes-card">
-                <img src="images/image5.jpg" alt="home 5">
-                <h3>Cedar Flats</h3>
-                <p><b>17,000 /month</b></p>
-                <p><i>Affordable 1-bedroom apartment with balcony
-                     and natural light.</i></p>
-                <a href="home5.html"><button class="details">Details</button></a>
-            </div>
-
-            <div class="homes-card">
-                <img src="images/image6.jpg" alt="home 6">
-                <h3>Harmony Homes</h3>
-                <p><b>68,000 /month</b></p>
-                <p><i>Spacious 2-bedroom apartment with private 
-                    parking and garden.</i></p>
-                <a href="home6.html"><button class="details">Details</button></a>
-            </div>
-
-            <div class="homes-card">
-                <img src="images/image7.jpg" alt="home 7">
-                <h3>Crystal Heights</h3>
-                <p><b>7,000 /month</b></p>
-                <p><i>Cozy bedsitter with bright windows and 
-                    peaceful surroundings.</i></p>
-                <a href="home7.html"><button class="details">Details</button></a>
-            </div>
-
-            <div class="homes-card">
-                <img src="home8/house8.jpg" alt="home 8">
-                <h3>Crown Suites</h3>
-                <p><b>17,000 /month</b></p>
-                <p><i>Modern 1-bedroom apartment with balcony
-                     and scenic surroundings.</i></p>
-                <a href="home8.html"><button class="details">Details</button></a>
-            </div>
-
-            <div class="homes-card">
-                <img src="home9/home9.jpg" style="height:100;" alt="home 9">
-                <h3>Grandview Apartments</h3>
-                <p><b>23,000 /month</b></p>
-                <p><i>Modern 2-bedroom apartment with spacious
-                     living area and balcony.</i></p>
-                <a href="home9.html"><button class="details">Details</button></a>
-            </div>
+    <main>
+        <!--Login form-->
+        <div class="login-box">
+            <h2>Login</h2>
+            <form id="loginform" class="login-form">
+                <input id="email" type="text" name="email" placeholder="Email" required><br><br> 
+                <input id="password" type="password" name="password" placeholder="Password" required><br><br>
+                <button class="btn" type="submit"><b>Login</b></button>
+            </form><br>
+            <p id="loginMessage"></p>
+            <p>Don't have an account? <a href="register.html">Register here</a></p>
         </div>
-    </section>
-
-    <!--footer-->
-    <footer class="footer">
-        <p>&copy; 2025 Rentopia | Designed by Chucky</p>
-    </footer>
-    
+    </main>
 </body>
 <script src="script.js"></script>
 </html>
