--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
         <h1>Rentopia</h1>
         <nav class="nav1">
             <a href="register.html">Register</a>
-            <a href="login.html">Login</a>
+            <a href="index.html">Login</a>
         </nav>
     </header>
 
